opam-version: "1.2"
name: "kiln"
version: "~unknown"
maintainer: "Katherine Whitlock <toroidalcode@gmail.com>"
authors: "Katherine Whitlock <toroidalcode@gmail.com>"
homepage: "https://github.com/brick-lang/kiln"
bug-reports: "https://github.com/brick-lang/kiln/issues"
dev-repo: "https://github.com/brick-lang/kiln"
license: "BSD-3-clause"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "cmdliner"
  "core"
  "dune" {build & >= "1.0"}
  "llvm"
  "menhir"
  "ppx_deriving"
  "ppx_let"
  "textutils"
  "yojson"
  "sedlex"
]
available: [ ocaml-version >= "4.04.1" ]
descr: "The reference compiler for the Brick language"
